--- a/templates/index.html
+++ b/templates/index.html
@@ -165,8 +165,9 @@
                     <td>{{ task[3] }}</td>
                     <td>{{ task[4] }}</td>
                     <td>{{ task[5] }}</td>
-                    <td><a style="color:green;text-decoration:none" href="{{ url_for('editTask', id=task[0]) }}">Edit</a></td>
-                    <td><a style="color:green;text-decoration:none" href="{{ url_for('deleteTask', id=task[0]) }}" onclick="return confirm('Are you sure you want to delete this task?');">Delete</a></td>
+                   <strong> <td><a style="color:green;text-decoration:none" href="{{ url_for('editTask', id=task[0]) }}">Edit</a></td>
+                    <td><a style="color:red;text-decoration:none" href="{{ url_for('deleteTask', id=task[0]) }}" onclick="return confirm('Are you sure you want to delete this task?');">Delete</a></td>
+                   </strong>
                 </tr>
                 {% endfor %}
             </tbody>
